--- a/phais/templates/error_404.html
+++ b/phais/templates/error_404.html
@@ -1,12 +1,24 @@
+<!DOCTYPE html>
 <html>
 
-<head>
-<title>Page not found.</title>
-</head>
+  <head>
+    <title>Page not found.</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+  </head>
 
-<body>
-<h1>We cannot find the page you seek.</h1>
-<h2>Please return to whence you have come.</h2>
-</body>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="hero-unit">
+          <h2>We cannot find the page you seek.</h2>
+          <p><small>Please return to whence you have come.</small></p>
+        </div>
+      </div>
+    </div>
+    
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+  </body>
 
 </html>
