--- a/phais/templates/bot_overview.html
+++ b/phais/templates/bot_overview.html
@@ -5,7 +5,7 @@
     <title>Bot Overview</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://payor.com.au/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="http://payor.com.au/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+    <link href="http://payor.com.au/css/bootstrap-theme.min.css" rel="stylesheet" media="screen">
   </head>
 
   <body>
