--- a/phais/templates/user_profile.html
+++ b/phais/templates/user_profile.html
@@ -5,11 +5,11 @@
     <title>Username's Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://payor.com.au/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="http://payor.com.au/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+    <link href="http://payor.com.au/css/bootstrap-theme.min.css" rel="stylesheet" media="screen">
   </head>
 
   <body>
-    <div class="container hero-unit">
+    <div class="container jumbotron">
       <div class="row">
         <h1>Username's Profile</h1>
       </div>
