--- a/phais/templates/error_404.html
+++ b/phais/templates/error_404.html
@@ -1,25 +1,15 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base.html' %}
 
-  <head>
-    <title>Page not found.</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
-  </head>
+{% block title %}
+  Page not found.
+{% endblock title %}
 
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="hero-unit">
-          <h2>We cannot find the page you seek.</h2>
-          <p><small>Please return to whence you have come.</small></p>
-        </div>
-      </div>
-    </div>
-    
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-  </body>
 
-</html>
+{% block content %}
+  
+  <div class="jumbotron">
+    <h2>We cannot find the page you seek.</h2>
+    <p><small>Please return to whence you have come.</small></p>
+  </div>
+
+{% endblock content %}
