--- a/phais/templates/base.html
+++ b/phais/templates/base.html
@@ -23,6 +23,7 @@
       {% block bootstrap %}
         <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href="/static/css/bootstrap-theme.min.css" rel="stylesheet" media="screen">
+        <link href="/static/css/bootstrap-slider.min.css" rel="stylesheet" media="screen">
         <style>
           body {
             padding-top: 70px;
@@ -90,6 +91,7 @@
     {% block scripts %}    
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
       <script src="/static/js/bootstrap.min.js"></script>
+      <script src="/static/js/bootstrap-slider.min.js"></script>
     {% endblock scripts %}
 
   </body>
