Minor fixes and size slider outline.

--- a/phais/templates/visualizer.html
+++ b/phais/templates/visualizer.html
@@ -54,6 +54,9 @@
           <div style="padding: 10px 10px 5px 10px; background-color: #040206; display: inline-block;">
             <canvas id="visualization"></canvas>
           </div>
+          <div style="display: inline-block;">
+            <div id="scaleSlider" class="slider" data-slider-min="100" data-slider-max="1500" data-slider-step="1" data-slider-handle="triangle"></div>
+          </div> <!-- TODO:  SCALE SLIDER. -->
           <div style="padding-top: 5px; padding-bottom: 25px;">
             <div id="moveSlider" class="slider" data-slider-min="0" data-slider-max="0" data-slider-value="0" data-slider-step="1" data-slider-handle="square" data-slider-selection="none"></div>
           </div>
