--- a/phais/templates/visualizer.html
+++ b/phais/templates/visualizer.html
@@ -23,6 +23,16 @@
       background-image:-webkit-linear-gradient(top,#3030a0 0,#6050c0 100%);
       background-image:linear-gradient(to bottom,#3030a0 0,#6050c0 100%);
       filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3010a0',endColorstr='#ff305080',GradientType=0);
+      z-index: 1000;
+    }
+
+    #tooltip {
+      z-index: 999;
+    }
+
+    button {
+      position: relative;
+      z-index: 1001;
     }
 
     .unselectable {
@@ -43,51 +53,43 @@
 
 {% block content %}
   
-  <div class="jumbotron">
-    <h2>Game Visualization</h2>
-  </div>
-
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-8 unselectable" align="center" style="padding: 5px;">
-        <div style="display: inline-block; background-color: rgb(215, 210, 215); padding: 10px;">
-          <div style="padding: 10px 10px 5px 10px; background-color: #040206; display: inline-block;">
-            <canvas id="visualization"></canvas>
+    <div id="visualizerContainer" class="unselectable" style="padding: 5px;">
+      <div id="visualizerBox" style="display: inline-block; background-color: rgb(215, 210, 215); padding: 10px; text-align: center;">
+        <div style="padding: 10px 10px 5px 10px; background-color: #040206;">
+          <canvas id="visualization"></canvas>
+        </div>
+        <div style="padding-top: 5px; padding-bottom: 12px;">
+          <input type="text" id="moveSlider" class="slider" data-slider-min="0" data-slider-max="0" data-slider-value="0" data-slider-step="1" data-slider-handle="square" data-slider-selection="none" />
+        </div>
+        <div>
+          <div style="display: inline-block; padding-bottom: 8px;">
+            <button type="button" class="btn btn-default btn-sm horizontal-flip" onclick="rewind()">
+              <span class="glyphicon glyphicon-play"></span>
+            </button>
+            <button type="button" class="btn btn-default btn-sm" onclick="pause()">
+              <span class="glyphicon glyphicon-pause"></span>
+            </button>
+            <button type="button" class="btn btn-default btn-sm" onclick="play()">
+              <span class="glyphicon glyphicon-play"></span>
+            </button>
           </div>
-          <div style="display: inline-block;">
-            <div id="scaleSlider" class="slider" data-slider-min="100" data-slider-max="1500" data-slider-step="1" data-slider-handle="triangle"></div>
-          </div> <!-- TODO:  SCALE SLIDER. -->
-          <div style="padding-top: 5px; padding-bottom: 25px;">
-            <div id="moveSlider" class="slider" data-slider-min="0" data-slider-max="0" data-slider-value="0" data-slider-step="1" data-slider-handle="square" data-slider-selection="none"></div>
+          <div style="padding-left: 20px; padding-top: 12px; display: inline-block;">
+            <label for="speedSlider"> Speed: </label>
+            <div id="speedSlider" class="slider" data-slider-min="0" data-slider-max="1" data-slider-value="0.5" data-slider-step="0.001" style="width: 200px"></div>
           </div>
-          <div>
-            <span>
-              <button type="button" class="btn btn-default btn-sm horizontal-flip" onclick="rewind()">
-                <span class="glyphicon glyphicon-play"></span>
-              </button>
-              <button type="button" class="btn btn-default btn-sm" onclick="pause()">
-                <span class="glyphicon glyphicon-pause"></span>
-              </button>
-              <button type="button" class="btn btn-default btn-sm" onclick="play()">
-                <span class="glyphicon glyphicon-play"></span>
-              </button>
-            </span>
-            <span style="padding-left: 20px">
-              <label for="speedSlider"> Speed: </label>
-              <div id="speedSlider" class="slider" data-slider-min="0" data-slider-max="1" data-slider-value="0.5" data-slider-step="0.001" style="width: 200px"></div>
-            </span>
+          <div style="padding-left: 20px; padding-top: 12px; display: inline-block;">
+            <label for="sizeSlider"> Size: </label>
+            <div id="sizeSlider" class="slider" data-slider-min="256" data-slider-max="1024" data-slider-step="1" data-slider-handle="triangle"></div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4">
-        Text!
       </div>
     </div>
   </div>
 
 
   <!-- Dodgy hack to make 'Six Caps' webfont load before the visualiser starts -->
-  <div style="position: absolute; left: -10000px; top: -10000; font-family: 'Six Caps';">HIII</div>
+  <div style="position: absolute; left: -10000px; top: -10000px; font-family: 'Six Caps';">SiX+CaPs</div>
 
 {% endblock content %}
 
@@ -102,7 +104,11 @@
 
   <script type="text/javascript">
     
-    var width = window.innerHeight - 200;
+    var getAvailableWidth = function() {
+      return Math.max(Math.min(Math.min(window.innerHeight - 200, window.innerWidth - 65), 1024), 256);
+    };
+
+    var width = getAvailableWidth();
     var timer = null;
     var current = null;
     var timeout = 0;
@@ -113,10 +119,20 @@
     };
     timeout = getTimeout(0.5);
 
+    $('#sizeSlider').slider({
+
+      formater: function(value) {
+        return value.toString() + " pixels";
+      }
+
+    }).on('slide slideStart', function(e) {
+      $('#visualization').width(e.value).height(e.value);
+      scrollToVisualizer();
+    }).on('slideStop', function(e) {
+      resize(e.value);
+    });
 
     $('#speedSlider').slider({
-      
-      id: "speedSliderInstance",
 
       formater:  function(value) {
         var perSecond = Math.round(1000.0 / getTimeout(value));
@@ -128,38 +144,61 @@
     });
 
 
-    $('#moveSlider').css('width', (width - 50).toString() + 'px');
-
-    $('#moveSlider').slider({
+    var moveSlider = $('#moveSlider').slider({
 
       formater: function(value) {
         return 'Turn ' + value.toString();
       },
 
-    }).on('slide', function(e) {
-      visualizer.seek(e.value);
-    }).on('slideStart', function(e) {
-      preDragState = current;
-      if (preDragState != null) {
-        pause();
-      }
-      visualizer.seek(e.value);
-    }).on('slideStop', function(e) {
-      if (preDragState != null) {
-        if (preDragState == 'play') {
-          play();
-        } else if (preDragState == 'rewind') {
-          rewind();
-        }
-        preDragState = null;
-      }
     });
 
-    var updateMoveSlider = function() {
-      $('#moveSlider').slider('setValue', visualizer.moveIndex);
+    var addMoveSliderEvents = function(slider) {
+      slider.on('slide', function(e) {
+        visualizer.seek(e.value);
+      }).on('slideStart', function(e) {
+        preDragState = current;
+        if (preDragState != null) {
+          pause();
+        }
+        visualizer.seek(e.value);
+      }).on('slideStop', function(e) {
+        if (preDragState != null) {
+          if (preDragState == 'play') {
+            play();
+          } else if (preDragState == 'rewind') {
+            rewind();
+          }
+          preDragState = null;
+        }
+      });
     };
 
+    var updateMoveSliderWidth = function(width) {
+      var value = moveSlider.slider('getValue');
+      moveSlider = moveSlider.css('width', (width - 50).toString() + 'px')
+                             .slider('destroy')
+                             .slider({ formater: function(value) {
+                                return 'Turn ' + value.toString();
+                              }, })
+                             .slider('setAttribute', 'max', visualizer.numMoves)
+                             .slider('setValue', value);
+      addMoveSliderEvents(moveSlider);
+    };
 
+    var scrollToVisualizer = function() {
+      $('html, body')[1].scrollTop = $('#visualizerContainer').offset().top + $('#visualizerContainer').height() - window.innerHeight - 10;
+    };
+
+    var resize = function(size) {
+      width = size;
+      updateMoveSliderWidth(size);
+      visualizer.resize(size);
+      scrollToVisualizer();
+    };
+
+    var updateMoveSlider = function() {
+      moveSlider.slider('setValue', visualizer.moveIndex);
+    };
 
     var moveForward = function() {
       if (visualizer.moveIndex == visualizer.numMoves) {
@@ -225,8 +264,12 @@
       }
     };
 
+    
+    $('#sizeSlider').slider('setValue', width);
+
     visualizer.run($('#visualization')[0], '{{ log }}', width, function() {
-      $('#moveSlider').slider('setAttribute', 'max', visualizer.numMoves);
+      $('#moveSlider').slider('setAttribute', 'max', visualizer.numMoves).attr('data-slider-max', visualizer.numMoves);
+      updateMoveSliderWidth(width);
       play();
     });
 
